--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -24,19 +24,26 @@ dependencies {
 }
 
 task macLibCopy(type: Copy) {
-  from 'build/lib/libsecp256k1.dylib'
+  from 'build/darwin/lib/libsecp256k1.dylib'
   into 'build/resources/main/darwin'
 }
 jar.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
-  from 'build/lib/libsecp256k1.so'
+  from 'build/linux-gnu-x86_64/lib/libsecp256k1.so'
   into 'build/resources/main/linux-x86-64'
 }
 jar.dependsOn linuxLibCopy
 
+task linuxArm64LibCopy(type: Copy) {
+  from 'build/linux-gnu-aarch64/lib/libsecp256k1.so'
+  into 'build/resources/main/linux-aarch64'
+}
+jar.dependsOn linuxArm64LibCopy
+
 jar {
   archiveBaseName = 'besu-native-secp256k1'
+  includeEmptyDirs = false
   manifest {
     attributes(
         'Specification-Title': archiveBaseName,
