Native implementation of the Blake2bf compress function for EIP152
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@
 
 rootProject.name='besu-native'
 include 'altbn128'
+include 'blake2bf'
 include 'bls12-381'
 include 'ipa-multipoint'
 include 'secp256k1'
