--- a/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
+++ b/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
@@ -22,7 +22,7 @@ repository = "https://github.com/hyperledger/besu-native"
 edition = "2018"
 
 [dependencies]
-ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", branch = "develop" }
+ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", rev = "d5590ef5" }
 bandersnatch = "0.1.1"
 jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
 ark-ff = "0.3.0"
