--- a/blake2bf/build.gradle
+++ b/blake2bf/build.gradle
@@ -37,6 +37,12 @@ task linuxLibCopy(type: Copy) {
 }
 jar.dependsOn linuxLibCopy
 
+task linuxArm64LibCopy(type: Copy) {
+  from 'build/linux-gnu-aarch64/lib/libblake2bf.so'
+  into 'build/resources/main/linux-aarch64'
+}
+jar.dependsOn linuxArm64LibCopy
+
 jar {
   archiveBaseName = 'besu-native-blake2bf'
   includeEmptyDirs = false
