use docker to build the arm image
Signed-off-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,8 @@ jobs:
           path: ipa-multipoint/build/
   native-build-linux-arm64:
     runs-on: ubuntu-latest
+    container:
+      image: cake233/rust-armv7:2022-08-08
     env:
       SKIP_GRADLE: true
     steps:
@@ -57,18 +59,14 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        uses: uraimo/run-on-arch-action@v2
-        with:
-          arch: armv7
-          distro: ubuntu18.04
-          run: |
-            # secp256k1 dependencies
-            sudo apt-get update
-            sudo apt-get install -y autoconf build-essential libtool automake patchelf
-            # rust dependencies
-            export CARGO_HOME="$HOME/.cargo"
-            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.62.1
-            ./build.sh
+        run: |
+          # secp256k1 dependencies
+          sudo apt-get update
+          sudo apt-get install -y autoconf build-essential libtool automake patchelf
+          # rust dependencies
+          export CARGO_HOME="$HOME/.cargo"
+          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.62.1
+          ./build.sh
       - uses: actions/upload-artifact@v3.1.0
         with:
           name: altbn128 native build artifacts
