--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           name: ipa-multipoint native build artifacts
           path: ipa-multipoint/build/
   native-build-linux-arm64:
-    runs-on: besu
+    runs-on: [self-hosted, besu, macos]
     env:
       SKIP_GRADLE: true
     steps:
@@ -130,7 +130,7 @@ jobs:
           name: ipa-multipoint native build artifacts
           path: ipa-multipoint/build/
   native-build-m1:
-    runs-on: besu
+    runs-on: [self-hosted, besu, macos]
     env:
       SKIP_GRADLE: true
     steps:
