Add safe submodule directory (#76)
* Add safe submodule directory

Signed-off-by: Antoine Toulme <antoine@lunar-ocean.com>

* select the mac runner

Signed-off-by: Antoine Toulme <antoine@lunar-ocean.com>

* Builder selection

Add safe directory

Name CI job

Signed-off-by: Antoine Toulme <antoine@lunar-ocean.com>
Signed-off-by: Ry Jones <ry@linux.com>
Co-authored-by: Ry Jones <ry@linux.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,11 @@
+name: Build and publish
+
 on:
   pull_request:
   push:
     branches:
       - main
+
 jobs:
   native-build-linux-x86-64:
     runs-on: ubuntu-latest
@@ -48,7 +51,7 @@ jobs:
           name: ipa-multipoint native build artifacts
           path: ipa-multipoint/build/
   native-build-linux-arm64:
-    runs-on: besu
+    runs-on: [self-hosted, Linux, ARM64]
     env:
       SKIP_GRADLE: true
     steps:
@@ -130,7 +133,7 @@ jobs:
           name: ipa-multipoint native build artifacts
           path: ipa-multipoint/build/
   native-build-m1:
-    runs-on: besu
+    runs-on: [self-hosted, besu, macOS, ARM64]
     env:
       SKIP_GRADLE: true
     steps:
