--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -244,5 +244,8 @@ jobs:
       - name: gradle publish
         uses: gradle/gradle-build-action@v2
         if: contains('refs/heads/release-', github.ref) || github.ref == 'refs/heads/main'
+        env:
+          ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER}}
+          ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY }}
         with:
           arguments: --no-daemon --parallel publish artifactoryPublish --scan
