Ship both x86 and aarch64 darwin libs
Signed-off-by: Antoine Toulme <antoine@lunar-ocean.com>

--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -26,9 +26,15 @@ dependencies {
   testImplementation 'org.mockito:mockito-core:4.4.0'
 }
 
+task macArmLibCopy(type: Copy) {
+  from 'build/darwin-aarch64/lib/libipa_multipoint_jni.*'
+  into 'build/resources/main/darwin-aarch64'
+}
+jar.dependsOn macArmLibCopy
+
 task macLibCopy(type: Copy) {
-  from 'build/darwin/lib/libipa_multipoint_jni.dylib'
-  into 'build/resources/main/darwin'
+  from 'build/darwin-x86_64/lib/libipa_multipoint_jni.dylib'
+  into 'build/resources/main/darwin-x86_64'
 }
 jar.dependsOn macLibCopy
 
