--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -20,6 +20,7 @@ plugins {
 }
 
 dependencies {
+  implementation 'net.java.dev.jna:jna:5.12.1'
   testImplementation 'org.apache.tuweni:tuweni-bytes:2.2.0'
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.assertj:assertj-core:3.22.0'
