--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -28,26 +28,28 @@ dependencies {
 }
 
 task macArmLibCopy(type: Copy) {
-  from 'build/darwin-aarch64/lib/libipa_multipoint_jni.*'
+  from 'build/darwin-aarch64/lib/libipa_multipoint_jni.so'
   into 'build/resources/main/darwin-aarch64'
 }
-jar.dependsOn macArmLibCopy
+processResources.dependsOn macArmLibCopy
 
 task macLibCopy(type: Copy) {
-  from 'build/darwin-x86_64/lib/libipa_multipoint_jni.dylib'
-  into 'build/resources/main/darwin-x86_64'
+  from 'build/darwin-x86-64/lib/libipa_multipoint_jni.dylib'
+  into 'build/resources/main/darwin-x86-64'
 }
-jar.dependsOn macLibCopy
+processResources.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
   from 'build/linux-gnu-x86_64/lib/libipa_multipoint_jni.so'
   into 'build/resources/main/linux-x86-64'
 }
+processResources.dependsOn linuxLibCopy
+
 task linuxArm64LibCopy(type: Copy) {
   from 'build/linux-gnu-aarch64/lib/libipa_multipoint_jni.so'
   into 'build/resources/main/linux-aarch64'
 }
-jar.dependsOn linuxArm64LibCopy
+processResources.dependsOn linuxArm64LibCopy
 
 jar {
   archiveBaseName = 'besu-native-ipa-multipoint'
@@ -88,7 +90,7 @@ publishing {
 
       pom {
         name = "Besu Native - ${project.name}"
-        description = 'Adapter for native alt_bn128'
+        description = 'IPA Multipoint Library'
         url = 'http://github.com/hyperledger/besu-native'
         licenses {
           license {
