--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -28,16 +28,22 @@ dependencies {
 }
 
 task macLibCopy(type: Copy) {
-  from 'build/darwin/lib/libeth_pairings.dylib'
-  into 'build/resources/main/darwin'
+  from 'build/darwin-x86-64/lib/libeth_pairings.dylib'
+  into 'build/resources/main/darwin-x86-64'
 }
-jar.dependsOn macLibCopy
+processResources.dependsOn macLibCopy
+
+task macAarch64LibCopy(type: Copy) {
+  from 'build/darwin-aarch64/lib/libeth_pairings.so'
+  into 'build/resources/main/darwin-aarch64'
+}
+processResources.dependsOn macAarch64LibCopy
 
 task linuxLibCopy(type: Copy) {
   from 'build/linux-gnu-x86_64/lib/libeth_pairings.so'
   into 'build/resources/main/linux-x86-64'
 }
-jar.dependsOn linuxLibCopy
+processResources.dependsOn linuxLibCopy
 
 jar {
   archiveBaseName = 'besu-native-bls12-381'
