--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 }
 
 task macArmLibCopy(type: Copy) {
-  from 'build/darwin-aarch64/lib/libipa_multipoint_jni.so'
+  from 'build/darwin-aarch64/lib/libipa_multipoint_jni.dylib'
   into 'build/resources/main/darwin-aarch64'
 }
 processResources.dependsOn macArmLibCopy
