--- a/blake2bf/x86_64/makefile
+++ b/blake2bf/x86_64/makefile
@@ -1,16 +1,21 @@
 CC=gcc
 CFLAGS=-O2 -Wall -Wextra -pedantic -Wno-long-long -fpic
 
-all:		libblake2bf.so libblake2bf.dylib
+UNAME := $(shell uname)
+
+all: libblake2bf.so libblake2bf.dylib
 
 compile:    blake2b.c
 	$(CC) blake2b.c -c $(CFLAGS)
 
 libblake2bf.so: blake2b.o
-		$(CC) -o $@ -shared $(CFLAGS) blake2b.o
+	$(CC) -o $@ -shared $(CFLAGS) blake2b.o
 
 libblake2bf.dylib: blake2b.o
-		$(CC) -o $@ -dynamiclib $(CFLAGS) blake2b.o
+ifeq ($(UNAME), Darwin)
+	$(CC) -o $@ -dynamiclib $(CFLAGS) blake2b.o
+endif
+
 
 clean:
-		rm -rf *.o *.dylib *.so
+	rm -rf *.o *.dylib *.so
