--- a/blake2bf/build.gradle
+++ b/blake2bf/build.gradle
@@ -20,28 +20,36 @@ plugins {
 }
 
 dependencies {
-  implementation 'net.java.dev.jna:jna:5.11.0'
+  implementation 'net.java.dev.jna:jna:5.12.1'
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
-task macLibCopy(type: Copy) {
-  from 'build/darwin/lib/libblake2bf.dylib'
-  into 'build/resources/main/darwin'
+task macAarch64LibCopy(type: Copy) {
+  from 'build/darwin-aarch64/lib/libblake2bf.dylib'
+  into 'build/resources/main/darwin-aarch64'
 }
-jar.dependsOn macLibCopy
+
+processResources.dependsOn macAarch64LibCopy
+
+task macLibCopy(type: Copy) {
+  from 'build/darwin-x86-64/lib/libblake2bf.dylib'
+  into 'build/resources/main/darwin-x86-64'
+}
+
+processResources.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
   from 'build/linux-gnu-x86_64/lib/libblake2bf.so'
   into 'build/resources/main/linux-x86-64'
 }
-jar.dependsOn linuxLibCopy
+processResources.dependsOn linuxLibCopy
 
 task linuxArm64LibCopy(type: Copy) {
   from 'build/linux-gnu-aarch64/lib/libblake2bf.so'
   into 'build/resources/main/linux-aarch64'
 }
-jar.dependsOn linuxArm64LibCopy
+processResources.dependsOn linuxArm64LibCopy
 
 jar {
   archiveBaseName = 'besu-native-blake2bf'
