Copy linux BLS lib
Copy the eth_pairings.so lib into the jar resources directory.

Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>

--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -45,6 +45,12 @@ task linuxLibCopy(type: Copy) {
 }
 processResources.dependsOn linuxLibCopy
 
+task linuxArm64LibCopy(type: Copy) {
+  from 'build/linux-gnu-aarch64/lib/libeth_pairings.so'
+  into 'build/resources/main/linux-aarch64'
+}
+processResources.dependsOn linuxArm64LibCopy
+
 jar {
   archiveBaseName = 'besu-native-bls12-381'
   includeEmptyDirs = false
