feat: add java modules support
Signed-off-by: Mustafa Uzun <mustafa.uzun@limechain.tech>

--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -60,6 +60,7 @@ jar {
         'Specification-Version': project.version,
         'Implementation-Title': archiveBaseName,
         'Implementation-Version': project.version,
+        'Automatic-Module-Name': 'org.hyperledger.besu.native.Bls12_381'
     )
   }
 }
