--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -56,7 +56,7 @@ jar {
         'Specification-Version': project.version,
         'Implementation-Title': archiveBaseName,
         'Implementation-Version': project.version,
-        'Automatic-Module-Name': 'org.hyperledger.besu.native.Secp256k1'
+        'Automatic-Module-Name': 'org.hyperledger.besu.native.secp256k1'
     )
   }
 }
