Add module for low level arithmetic
Add a module for low level arithmetic, for performance.
First two operations are modexp precompile and mul operation.

Signed-off-by: Danno Ferrin <danno.ferrin@swirldslabs.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@
 
 rootProject.name='besu-native'
 include 'altbn128'
+include 'arithmetic'
 include 'blake2bf'
 include 'bls12-381'
 include 'ipa-multipoint'
