--- a/arithmetic/build.gradle
+++ b/arithmetic/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright contributors to Hyperledger Besu
+ * Copyright Hyperledger Besu Contributors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -29,18 +29,18 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'org.junit.platform:junit-platform-runner:1.8.2'
 }
+task macAarch64LibCopy(type: Copy) {
+    from 'build/darwin-aarch64/lib/libeth_arithmetic.dylib'
+    into 'build/resources/main/darwin-aarch64'
+}
+processResources.dependsOn macAarch64LibCopy
+
 
 task macLibCopy(type: Copy) {
     from 'build/darwin-x86-64/lib/libeth_arithmetic.dylib'
     into 'build/resources/main/darwin-x86-64'
 }
 processResources.dependsOn macLibCopy
-
-task macAarch64LibCopy(type: Copy) {
-    from 'build/darwin-aarch64/lib/libeth_arithmetic.dylib'
-    into 'build/resources/main/darwin-aarch64'
-}
-processResources.dependsOn macAarch64LibCopy
 
 task linuxLibCopy(type: Copy) {
     from 'build/linux-gnu-x86_64/lib/libeth_arithmetic.so'
@@ -63,6 +63,7 @@ jar {
                 'Specification-Version': project.version,
                 'Implementation-Title': archiveBaseName,
                 'Implementation-Version': project.version,
+                'Automatic-Module-Name': 'org.hyperledger.besu.native.arithmetic'
         )
     }
 }
