--- a/mimc/mimc-jni/Cargo.toml
+++ b/mimc/mimc-jni/Cargo.toml
@@ -10,3 +10,8 @@ pairing_ce = "0.28.5"
 lazy_static = "1.4"
 ff_ce = "0.14.3"
 serde = "1.0.159"
+jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
+
+[lib]
+name = "mimc_jni"
+crate-type = ["cdylib"]
