--- a/mimc/build.gradle
+++ b/mimc/build.gradle
@@ -21,7 +21,8 @@ plugins {
 
 dependencies {
     implementation 'net.java.dev.jna:jna:5.12.1'
-    testImplementation 'org.apache.tuweni:tuweni-bytes:2.2.0'
+    testImplementation 'net.java.dev.jna:jna:5.12.1'
+    implementation 'org.apache.tuweni:tuweni-bytes:2.2.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.22.0'
     testImplementation 'org.mockito:mockito-core:4.4.0'
