--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,18 @@ jobs:
         run: |
           # secp256k1 dependencies
           sudo apt-get update
+          sudo apt upgrade -y
           sudo apt-get install -y autoconf build-essential libtool automake patchelf
+          sudo apt autoremove -y
+          # golang dependencies
+          wget https://go.dev/dl/go1.20.2.linux-amd64.tar.gz
+          echo "4eaea32f59cde4dc635fbc42161031d13e1c780b87097f4b4234cfce671f1768  go1.20.2.linux-amd64.tar.gz" | sha256sum -c
+          tar -xzf go1.20.2.linux-amd64.tar.gz
+          export GOROOT=$(pwd)/go
+          export PATH=$GOROOT/bin:$PATH
           # rust dependencies
           export CARGO_HOME="$HOME/.cargo"
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.62.1
+          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.68.2
       - name: Checkout Repo
         uses: actions/checkout@v3
         with:
@@ -62,14 +70,7 @@ jobs:
     runs-on: [self-hosted, Linux, ARM64]
     env:
       SKIP_GRADLE: true
-
-
     steps:
-      - name: Prepare
-        run: |
-          sudo apt update
-          sudo apt upgrade
-          sudo apt install golang-go
       - name: Checkout Repo
         uses: actions/checkout@v3
         with:
@@ -118,9 +119,12 @@ jobs:
         run: |
           # secp256k1 dependencies
           brew install autoconf automake libtool
+          # gnark dependencies
+          brew install go@1.20 || true
+          export PATH=/usr/local/Cellar/go/1.20.2/bin:$PATH
           # rust dependencies
           export CARGO_HOME="$HOME/.cargo"
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.62.1
+          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.68.2
           # install both x86 and arm64 toolchains
           export PATH="$HOME/.cargo/bin:$PATH"
           rustup target add x86_64-apple-darwin
@@ -170,15 +174,18 @@ jobs:
     steps:
       - name: Prepare
         run: |
+          # secp256k1, gnark dependencies
+          brew install autoconf automake libtool 
+          # gnark dependencies
+          brew install go@1.20 || true 
+          export PATH=/usr/local/Cellar/go/1.20.2/bin:$PATH
           # rust dependencies
           export CARGO_HOME="$HOME/.cargo"
-          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.62.1
+          curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.68.2
           # install both x86 and arm64 toolchains
           export PATH="$HOME/.cargo/bin:$PATH"
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
-          # install go
-          brew install go@1.20
       - name: Checkout Repo
         uses: actions/checkout@v3
         with:
